--- a/.github/workflows/surge.yml
+++ b/.github/workflows/surge.yml
@@ -17,7 +17,10 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: 12
-  
+
+    - name: Install Ionic
+      run: npm install -g @ionic/cli
+
     - name: Install Packages
       run: npm install
       
